--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ description = "netlink packet types"
 failure = "0.1.5"
 byteorder = "1.3.2"
 netlink-packet-core = { path = "../netlink-packet-core", version = "0.1" }
+netlink-packet-utils = { path = "../netlink-packet-utils", version = "0.1" }
+
+[dev-dependencies]
+lazy_static = "1.4.0"
