--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/little-dude/netlink"
 description = "netlink packet types"
 
 [dependencies]
-failure = "0.1.6"
+anyhow = "1.0.31"
 byteorder = "1.3.2"
 netlink-packet-core = { path = "../netlink-packet-core", version = "0.1" }
 netlink-packet-utils = { path = "../netlink-packet-utils", version = "0.1" }
