--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ description = "netlink packet types"
 [dependencies]
 anyhow = "1.0.31"
 byteorder = "1.3.2"
-netlink-packet-core = { path = "../netlink-packet-core", version = "0.2" }
-netlink-packet-utils = { path = "../netlink-packet-utils", version = ">= 0.3, <0.5" }
+netlink-packet-core = "0.2"
+netlink-packet-utils = ">= 0.3, <0.5"
 
 [dev-dependencies]
 lazy_static = "1.4.0"
