--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Corentin Henry <corentinhenry@gmail.com>"]
 name = "netlink-packet-audit"
-version = "0.2.2"
+version = "0.3.0"  # TODO: drop this comment - already bumped version for trait changes
 edition = "2018"
 
 homepage = "https://github.com/little-dude/netlink"
@@ -14,7 +14,7 @@ description = "netlink packet types"
 [dependencies]
 anyhow = "1.0.31"
 byteorder = "1.3.2"
-netlink-packet-core = "0.2"
+netlink-packet-core = "0.3"
 netlink-packet-utils = ">= 0.3, <0.5"
 
 [dev-dependencies]
