--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,19 @@ readme = "../README.md"
 repository = "https://github.com/little-dude/netlink"
 description = "netlink packet types"
 
+[features]
+default = ["tokio_socket"]
+tokio_socket = ["netlink-proto/tokio_socket"]
+smol_socket = ["netlink-proto/smol_socket"]
+
 [dependencies]
 anyhow = "1.0.31"
+bytes = "1.0"
 byteorder = "1.3.2"
+log = "0.4.8"
 netlink-packet-core = "0.3"
 netlink-packet-utils = ">= 0.3, <0.5"
+netlink-proto = { default-features = false, version = "0.8" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
