--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Corentin Henry <corentinhenry@gmail.com>"]
 name = "netlink-packet-audit"
-version = "0.3.0"  # TODO: drop this comment - already bumped version for trait changes
+version = "0.4.0"
 edition = "2018"
 
 homepage = "https://github.com/little-dude/netlink"
@@ -16,9 +16,9 @@ anyhow = "1.0.31"
 bytes = "1.0"
 byteorder = "1.3.2"
 log = "0.4.8"
-netlink-packet-core = "0.3"
-netlink-packet-utils = ">= 0.3, <0.5"
-netlink-proto = { default-features = false, version = "0.8" }
+netlink-packet-core = "0.4"
+netlink-packet-utils = "0.5"
+netlink-proto = { default-features = false, version = "0.9" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
