--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,9 +16,9 @@ anyhow = "1.0.31"
 bytes = "1.0"
 byteorder = "1.3.2"
 log = "0.4.8"
-netlink-packet-core = "0.4"
-netlink-packet-utils = "0.5"
-netlink-proto = { default-features = false, version = "0.9" }
+netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
+netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
+netlink-proto = { default-features = false, version = "0.9.2", path = "../netlink-proto" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
