--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2018"
 cargo-fuzz = true
 
 [dependencies]
-netlink-packet-audit = "0.3"
-netlink-packet-core = "0.3"
+netlink-packet-audit = { version = "0.4", path = "../../netlink-packet-audit" }
+netlink-packet-core = { version = "0.4.2", path = "../../netlink-packet-core" }
 libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }
 
 [[bin]]
