--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ name = "netlink-packet-audit"
 version = "0.4.2"
 edition = "2018"
 
-homepage = "https://github.com/little-dude/netlink"
+homepage = "https://github.com/rust-netlink/netlink-packet-audit"
 keywords = ["netlink", "linux"]
 license = "MIT"
 readme = "../README.md"
-repository = "https://github.com/little-dude/netlink"
+repository = "https://github.com/rust-netlink/netlink-packet-audit"
 description = "netlink packet types"
 
 [dependencies]
@@ -16,9 +16,9 @@ anyhow = "1.0.31"
 bytes = "1.0"
 byteorder = "1.3.2"
 log = "0.4.8"
-netlink-packet-core = { version = "0.4.2", path = "../netlink-packet-core" }
-netlink-packet-utils = { version = "0.5.1", path = "../netlink-packet-utils" }
-netlink-proto = { default-features = false, version = "0.10", path = "../netlink-proto" }
+netlink-packet-core = "0.4.2"
+netlink-packet-utils = "0.5.1"
+netlink-proto = { default-features = false, version = "0.10" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
